--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.user-manage .ant-upload-list-item-container {
+    width: 150px !important;
+    height: 150px !important;
+}
